--- a/.github/workflows/ci-scripts-build.yml
+++ b/.github/workflows/ci-scripts-build.yml
@@ -97,6 +97,11 @@ jobs:
             configuration: default
             base: "7.0"
 
+          - os: centos-7
+            cmp: gcc
+            configuration: default
+            base: "7.0"
+
     steps:
     - uses: actions/checkout@v2
       with:
