--- a/.github/workflows/ci-scripts-build.yml
+++ b/.github/workflows/ci-scripts-build.yml
@@ -97,7 +97,7 @@ jobs:
             configuration: default
             base: "7.0"
 
-          - os: centos-7
+          - os: ubuntu-latest
             cmp: gcc
             configuration: default
             base: "7.0"
