--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     paths:
       - 'mrmShared/linux/**'
+  workflow_dispatch:
+    paths:
+      - 'mrmShared/linux/**'
 
 jobs:
   specific:
